--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,54 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;800&family=Ubuntu:wght@400;500;700&display=swap');
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: 'Poppins',sans-serif;
 
+}
+html{
+    scroll-behavior: smooth;
+}
+/* custom scroll bar */
+::-webkit-scrollbar {
+    width: 10px;
+}
+section{
+    padding: 100px 0;
+}
+.max-width{
+    max-width: 1300px;
+    padding: 0 80px;
+    margin: auto;
+}
+section .title{
+    position: relative;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+    font-family: 'Ubuntu', sans-serif;
+}
+section .title::before{
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    width: 180px;
+    height: 3px;
+    background: #111;
+    transform: translateX(-50%);
+}
+section .title::after{
+    position: absolute;
+    bottom: -8px;
+    left: 50%;
+    font-size: 20px;
+    color:#64f8ee;
+    padding: 0 5px;
+    background: #fff;
+    transform: translateX(-50%);
 }
 
 .navbar{
@@ -39,7 +83,8 @@
     color:#000;
 }
  .navbar ul li:hover{
-    background:#8b8989;
+    /* background:rgb(200, 193, 193); */
+    background: #fff fff;
     border-radius: 3px;
 }
 
@@ -86,7 +131,7 @@
     background-color: #64f8ee;
 }
 
-section{
+/* section{
     background:url(../images/index3.jpg);
     height: 100%;
     width: 100%;
@@ -96,4 +141,202 @@ section{
     top: 0;
     z-index: -1;
     filter: brightness(30%);
+    color: #fff;
+} */
+/* home section */
+
+.home{
+    display: flex;
+    background:#000;
+    color: #fff;
+    height: 100vh;
+    min-height: 500px;
+    font-family: 'Ubuntu',sans-serif;
+}
+
+.home .max-width{
+    margin: auto 0 auto 40px;
+}
+
+.home .home-content .text-1{
+    font-size: 27px;
+}
+.home .home-content .text-2{
+    font-size: 75px;
+    font-weight: 600;
+    margin-left: -3px;
+}
+.home .home-content .text-3{
+    font-size: 40px;
+    margin: 5px 0;
+}
+
+.home .home-content .text-3 span{
+    color: #64f8ee;
+    font-weight: 500;
+}
+
+/* about section */
+section{
+    padding: 100px 0;
+}
+.about,.skills{
+    font-family: 'Poppins',sans-serif;
+}
+
+.about .title{
+    position: relative;
+    font-family: 'Ubuntu',sans-serif;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+}
+.about .title::before{
+    content:"";
+    position: absolute;
+    width:180px;
+    height: 3px;
+    background: #000;
+    bottom: 0px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.about .title::after{
+    content:"who i am";
+    position: absolute;
+    padding: 5px;
+    background: #fff;
+    font-size: 20px;
+    color: #64f8ee;
+    bottom: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.about .about-content,.skills,.skills-content{
+display: flex;
+align-items: center;
+flex-wrap: wrap;
+justify-content: space-between;
+
+} 
+.about .about-content .left{
+width: 45%
+}
+
+.about .about-content .left img{
+    height: 400px;
+    width: 400px;
+    object-fit:cover;
+    border-radius: 6px;
+    
+}
+.about .about-content .right{
+width: 55%
+}
+.about .about-content .right .text{
+font-size:25px;
+font-weight: 600;
+margin-bottom: 10px;
+}
+.about .about-content .right .text span{
+color: #64f8ee;
+}
+.about .about-content .right p{
+text-align: justify;
+}
+
+.about .about-content .right a{
+    display: inline-block;
+    background: #000;
+    color: #fff;
+    font-size: 20px;
+    padding: 10px 30px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid #64f8ee;
+    transition: all 0.3s ease;
+}
+.about .about-content .right a:hover{
+    color: #64f8ee;
+    background: none;
+}
+
+.about .about-content column{
+    width:50%
+}
+
+/* Skills section */
+.skills .title::after{
+    content: "what i know";
+}
+.skills .skills-content .column{
+    width: calc(50% - 30px);
+}
+.skills .skills-content .left .text{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.skills .skills-content .left p{
+    text-align: justify;
+}
+.skills .skills-content .left a{
+    display: inline-block;
+    background:#000;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 8px 16px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid #64f8ee;
+    transition: all 0.3s ease;
+}
+.skills .skills-content .left a:hover{
+    color: #64f8ee;
+    background: none;
+}
+.skills .skills-content .right .bars{
+    margin-bottom: 15px;
+}
+.skills .skills-content .right .info{
+    display: flex;
+    margin-bottom: 5px;
+    align-items: center;
+    justify-content: space-between;
+}
+.skills .skills-content .right span{
+    font-weight: 500;
+    font-size: 18px;
+}
+.skills .skills-content .right .line{
+    height: 5px;
+    width: 100%;
+    background: lightgrey;
+    position: relative;
+}
+.skills .skills-content .right .line::before{
+    content: "";
+    position: absolute;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background:#000;
+}
+.skills-content .right .html::before{
+    width: 90%;
+}
+.skills-content .right .css::before{
+    width: 90%;
+}
+.skills-content .right .js::before{
+    width: 70%;
+}
+.skills-content .right .php::before{
+    width: 60%;
+}
+.skills-content .right .mysql::before{
+    width: 70%;
 }
